# Refactored-FlashSVD

./: .gitignore  LICENSE  README.md  environment.yml  install_local.sh  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
benchmark/: benchmark_flashsvdattn_ranks.py  benchmark_flashsvdffn.py  benchmark_long_context_attn.py  benchmark_long_context_decoder_attn.py  benchmark_long_context_decoder_ffn.py  benchmark_long_context_ffn.py
benchmark/benchmark/: decoder_attn_decode.csv  decoder_attn_prefill.csv  decoder_ffn_long_context.csv  long_context_ffn.csv
benchmark/decoder_kernel/: flash_attn_causal.py  flashsvdropeattn.py
benchmark/encoder_kernel/: flash_attn_triton.py  flashsvdattn.py  flashsvdffnv1.py  utils_mask.py
decoders/gpt2/: profile_asvd.py  profile_asvd_accum_flash.py  profile_asvd_accum_flashsvd.py  profile_dense.py  profile_dense_accum_flash.py  profile_svd_kv.py  profile_svd_kv_accum_flash.py  profile_svd_kv_infer_w_whiten.py  prompt_exp.txt
decoders/llama/: profile_asvd_flashsvd_llama_decode.py  profile_asvd_llama_decode.py  profile_dense.py  profile_dense_llama_decode.py  profile_svd_kv_llama_decode.py  profile_svd_kv_llama_w_whiten.py  profile_svd_llama.py  synthetic_prompt_256.txt
docs/: CLAUDE.md  CONTRIBUTING.md  DATASET_GUIDE.md  DATASET_QUICK_REFERENCE.md  FINETUNED_MODEL_ORGANIZATION.md  M5_UI_GUIDE.md  QUICK_START_UI.md  README_OLD_BACKUP.md  REPO_STRUCTURE.md
experiments/BERT/: profile_dense.py  profile_flashsvd.py  profile_svd.py
experiments/BERTAda/: adaptive_rank_selection.py  flashsvdattn.py  profile_flashsvd.py  profile_svd.py
experiments/BERTFW/: profile_dense.py  profile_flashfwsvd.py  profile_flashfwsvd_offload.py  profile_fwsvd.py
experiments/BERTWhiten/: flash_attn_triton.py  flashsvdffnv1.py  flashsvdffnv2.py  profile_dense.py  profile_flashsvd.py  profile_svd.py  (+1 more)
legacy/: app.py  train_bert_unified_min.py  utils_nlp.py
src/: __init__.py
train/: train_bert.py  train_bert_mlm.py  train_roberta.py  train_roberta_large.py
why_finetuning/: finetune_svd.py  finetune_svd_saveable.py  inference_svd_model.py  profile_flashsvd_full.py  profile_svd_full.py  profile_svd_unfinetuned.py
(+89 files in other folders)
